--- a/src/Estoy/AppBundle/Resources/views/Default/conocenos.html.twig
+++ b/src/Estoy/AppBundle/Resources/views/Default/conocenos.html.twig
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Inicio</a>
+                <a class="navbar-brand" href="{{ path('panel_index') }}">Inicio</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
